--- a/backend/.env
+++ b/backend/.env
@@ -3,5 +3,6 @@ db_username=root
 db_password=5253
 db_dbname=jobIgnite
 server_port=3000
-
+EMAIL_USER=jobignite22@gmail.com
+EMAIL_PASS=asti ouvt orrm tvgv
 
