--- a/backend/package.json
+++ b/backend/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.14.2",
+    "mysql2": "^3.14.3",
+    "nodemailer": "^7.0.5",
     "nodemon": "^3.1.10"
   }
 }
