--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 db_host=localhost
 db_username=root
-db_password=root
+db_password=5253
 db_dbname=jobIgnite
 server_port=3000
 EMAIL_USER=jobignite22@gmail.com
