--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql2": "^3.14.2",
     "nodemon": "^3.1.10",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "react-toastify": "^11.0.5"
   }
 }
