--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 db_host=localhost
 db_username=root
-db_password=5253
+db_password=walunjkar96
 db_dbname=jobIgnite
 server_port=3000
 
@@ -9,3 +9,4 @@ JWT_EXPIRES_IN=1d
 
 EMAIL_USER=jobignite22@gmail.com
 EMAIL_PASS=asti ouvt orrm tvgv
+
