--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 db_host=localhost
 db_username=root
-db_password=walunjkar96
+# db_password=walunjkar96
+db_password=5253
 db_dbname=jobIgnite
 server_port=3000
 
