--- a/backend/.env
+++ b/backend/.env
@@ -5,4 +5,4 @@ db_dbname=jobIgnite
 server_port=3000
 JWT_SECRET=ilovejobignite
 EMAIL_USER=jobignite22@gmail.com
-EMAIL_PASS=asti ouv torm tvgv
+EMAIL_PASS=fcmi ofpr pmgw jkzz
