--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.0",
     "react-slick": "^0.31.0",
+    "recharts": "^3.2.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
