Change database configuration in .env file
Updated database connection details for production.

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,10 @@
-﻿db_host=localhost
-db_username=root
-db_password=5253
-db_dbname=jobIgnite
+﻿db_host=sql12.freesqldatabase.com
+
+db_username=sql12804967
+db_password=IuzlEX3I4w
+db_dbname=sql12804967
 server_port=5000
 JWT_SECRET=ilovejobignite
+
 EMAIL_USER=jobignite22@gmail.com
 EMAIL_PASS=fcmi ofpr pmgw jkzz
